--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site settings
 title: 赵兴隆的技术专栏
 brief-intro: Android and Python Coder
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/xudailong" # the subpath of your site, e.g. /blog
 url: "https://zhaoxinglong.com/xudailong" # the base hostname & protocol for your site
 
 permalink: /:year/:month/:day/:title/
