--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: 赵兴隆的技术专栏
 brief-intro: Android and Python Coder
 baseurl: "/xudailong" # the subpath of your site, e.g. /blog
-url: "https://zhaoxinglong.com/xudailong" # the base hostname & protocol for your site
+url: "http://zhaoxinglong.com/xudailong" # the base hostname & protocol for your site
 
 permalink: /:year/:month/:day/:title/
 
